# AdePT

base/inc/AdePT/: Atomic.h
base/inc/CopCore/: CMakeLists.txt
base/inc/CopCore/include/CopCore/: CopCore.h  Invoke.cuh  Logger.h  LoggerCommon.h  TupleTools.cuh
base/inc/CopCore/include/CopCore/backend/: BackendCommon.h  CPUBackend.h  CPUID.h  CUDABackend.h  HIPBackend.h  Vector.h
base/inc/CopCore/src/backend/: CPUBackend.cpp  CPUID.cpp  HalfType.cpp  Utils.cpp
base/inc/CopCore/tests/: CMakeLists.txt  test_mandel.cu  test_saxpy.cu
examples/FisherPrice_cu/: CMakeLists.txt  cufisher_price_allen.cu
test/: test_atomic.cu
